2010-06-19  Joe English  <jenglish@users.sourceforge.net>

	* win/tkWinScrlbr.c, carbon/tkMacOSXScrlbr.c: Replace binding
	  procedures with ordinary event handlers [Patch 3009998].
	* generic/tkBind.c, generic/tk.h, generic/tkInt.h,
	  generic/tkInt.decls: Simplifications enabled by previous change:
	  TkCreateBindingProcedure() and associated machinery
	  no longer needed; TkBindDeadWindow() no longer needed;
	  TK_DEFER_MODAL_LOOP and associated machinery no longer needed.
	* generic/tkTest.c, tests/bind.test: Tests related to C binding
	  procedures no longer needed.
	* generic/tkWindow.c: TkBindDeadWindow() no longer needed.
	* generic/tkIntDecls.h, generic/tkStubInit.c: Regenerated.

2010-06-15  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/ttk.tcl: Bump dummy [package ifneeded tile] version
	to 0.8.6; see [Bug 3016598].

2010-06-15  Donal K. Fellows  <dkf@users.sf.net>

	* library/text.tcl (TextCursorInSelection): [Patch 2585265]: Make it
	so that pressing delete or backspace when the primary selection does
	not include the insertion cursor does not cause the deletion of the
	inserted text.

2010-06-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvArc.c:	Eliminate many unnecessary (ClientData) type
	* generic/tkCanvas.c:	casts.
	* generic/tkCanvBmap.c:
	* generic/tkCanvImg.c:
	* generic/tkCanvLine.c:
	* generic/tkCanvPoly.c:
	* generic/tkCanvTest.c:
	* generic/tkCanvWind.c:
	* generic/tkRectOval.c:
	* generic/tkScrollbar.c:
	* generic/tkStyle.c:
	* generic/tkTest.c:
	* unix/tkUnixEmbed.c:
	* unix/tkUnixEvent.c:
	* unix/tkUnixScale.c:
	* unix/tkUnixScrlbr.c:
	* unix/tkUnixSelect.c:
	* unix/tkUnixWm.c:
	* carbon/tkMacOSXDialog.c: Terminate TkEnsemble definition with NULL
	* macosx/tkMacOSXDialog.c:

2010-05-31  Joe English <jenglish@users.sourceforge.net>

	* generic/tkBind.c (Tk_CreateBinding): [Bug 3006842]: Silently ignore
	empty scripts.

2010-05-27  Joe English <jenglish@users.sourceforge.net>
